# cloneAutoRiaProject

./: .env  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
apps/cars/: filters.py  models.py  serializers.py  views.py
apps/cars/migrations/: 0002_alter_carmodel_options_carmodel_engine_and_more.py  0004_carmodel_auto_lot.py  0004_carmodel_user.py
apps/user_auto_lots/: apps.py  models.py  serializers.py  urls.py  views.py
apps/user_auto_lots/migrations/: 0001_initial.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_remove_usermodel_age_remove_usermodel_name_and_more.py  0004_rename_is_seller_usermodel_is_premium.py
backend/apps/auth/: urls.py  views.py
backend/apps/cars/: choices.py  filters.py  models.py  urls.py  views.py
backend/apps/cars/migrations/: 0001_initial.py  0003_remove_carmodel_engine.py  0005_alter_carmodel_options_alter_carmodel_body_type_and_more.py  0006_carmodel_photo_car.py
backend/apps/users/: apps.py  models.py  serializers.py  urls.py  views.py
backend/configs/: settings.py  urls.py
backend/configs/extra_conf/: jwt_conf.py  rest_conf.py
backend/core/: pagination.py
backend/core/dataclasses/: car_dataclass.py
backend/core/enums/: action_token_enum.py  regex_enum.py
backend/core/handlers/: error_handler.py
backend/core/services/: email_service.py  jwt_service.py
configs/: settings.py  urls.py
configs/extra_conf/: rest_conf.py
core/enums/: regex_enum.py
core/services/: upload_pthoto_car.py
(+4 files in other folders)
